--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #c6c9cc;
+  background-color: #edf0f3;
   color: #333;
+  padding-top: 240px;
 }
-header {
+/* header {
   background-color: #1e3a5f;
   color: white;
   padding: 1em 2em;
@@ -18,11 +19,25 @@ header {
   position: sticky;
   top: 0;
   z-index: 1000;
+  min-height: 50px;
+  max-height: 100px;
+  width: 100%;
+}  */
+
+.navbar-color{
+  background-color: #1e3a5f;
+  max-height: 130px;
+  color: rgb(170, 167, 167);
 }
+:root {
+  scroll-padding-top: 138px;
+  padding-top: 80px;
+}
+
 .logo {
   height: 120px;
-  width: 250px;
-  padding-top:10px;
+  width: 280px;
+  padding-top:6px;
 }
 nav a {
   color: rgb(255, 255, 255);
@@ -31,9 +46,11 @@ nav a {
   font-weight: 500;
   transition: color 0.3s;
 }
+
 nav a:hover {
   color: #fc0505;
 }
+
 section {
   padding: 3em 5%;
   background-color: #ffffff;
@@ -125,7 +142,7 @@ body {
 .feedback-form {
   max-width: 1000px;
   margin: auto;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
